--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="size_button_m">48dp</dimen>
     <dimen name="size_divider">2px</dimen>
     <dimen name="size_icon_m">24dp</dimen>
+    <dimen name="size_icon_l">32dp</dimen>
     <dimen name="size_corner_s">16dp</dimen>
 
     <dimen name="unread_messages_chip_size">20dp</dimen>
@@ -111,6 +112,9 @@
     <dimen name="height_contact_entry">68dp</dimen>
     <dimen name="size_contact_icon">40dp</dimen>
     <dimen name="padding_contact_group_icon">10dp</dimen>
+
+    <!-- Attachments -->
+    <dimen name="height_add_attachments_action_sheet_item">56dp</dimen>
 
     <!-- endregion -->
 
