--- a/app/src/main/res/drawable-v21/unread_message_bg_selector.xml
+++ b/app/src/main/res/drawable-v21/unread_message_bg_selector.xml
@@ -18,6 +18,6 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/dark_glacier_blue">
-    <item android:drawable="@color/glacier_blue" />
+    android:color="@color/background_secondary">
+    <item android:drawable="@color/background_norm" />
 </ripple>
