--- a/app/src/main/res/drawable/read_message_bg_selector.xml
+++ b/app/src/main/res/drawable/read_message_bg_selector.xml
@@ -18,6 +18,6 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/dark_silver_gray" android:state_pressed="true" />
-    <item android:drawable="@color/silver_gray" />
+    <item android:drawable="@color/background_norm" android:state_pressed="true" />
+    <item android:drawable="@color/background_secondary" />
 </selector>
