--- a/app/src/main/res/layout/messages_list_item_new.xml
+++ b/app/src/main/res/layout/messages_list_item_new.xml
@@ -59,7 +59,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/inbox_check_selector"
-                app:tint="@color/dark_purple"
+                app:tint="@color/cornflower_blue"
 				tools:visibility="gone"
 			/>
 
@@ -91,7 +91,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:padding="0dp"
                         android:text="@string/trash_icon"
                         tools:text="Tr"
-						android:textColor="@color/location_gray"
+						android:textColor="@color/text_disabled"
                         android:textSize="@dimen/h4" />
 
                     <TextView
@@ -103,7 +103,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:gravity="bottom"
                         android:padding="0dp"
                         android:text="@string/archive_icon"
-                        android:textColor="@color/location_gray"
+                        android:textColor="@color/text_disabled"
                         android:textSize="@dimen/h4" />
 
                     <TextView
@@ -112,14 +112,14 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginEnd="4dp"
-                        android:background="@color/location_gray"
+                        android:background="@color/shade_40"
                         android:gravity="bottom"
                         android:paddingBottom="0dp"
                         android:paddingLeft="4dp"
                         android:paddingRight="4dp"
                         android:paddingTop="0dp"
                         android:textAllCaps="true"
-                        android:textColor="@color/name_gray"
+                        android:textColor="@color/text_weak"
                         android:textSize="@dimen/h7"
                         android:visibility="gone" />
 
@@ -133,7 +133,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:padding="0dp"
                         android:text="@string/reply_icon"
 						tools:text="&lt;-"
-                        android:textColor="@color/location_gray"
+                        android:textColor="@color/text_disabled"
                         android:textSize="@dimen/h4" />
 
                     <TextView
@@ -146,7 +146,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:padding="0dp"
                         android:text="@string/replyall_icon"
 						tools:text="&lt;--"
-                        android:textColor="@color/location_gray"
+                        android:textColor="@color/text_disabled"
                         android:textSize="@dimen/h4" />
 
                     <TextView
@@ -159,7 +159,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:padding="0dp"
                         android:text="@string/forward_icon"
 						tools:text="-&gt;"
-                        android:textColor="@color/location_gray"
+                        android:textColor="@color/text_disabled"
                         android:textSize="@dimen/h4" />
                 </LinearLayout>
 
@@ -289,7 +289,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 			android:id="@+id/item_divider"
 			android:layout_width="0dp"
 			android:layout_height="1px"
-			android:background="@color/message_divider_gray"
+			android:background="@color/separator_norm"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
