--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -21,9 +21,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/save_settings"
-        android:icon="@drawable/save"
-        android:title="@string/save_settings"
+        android:id="@+id/save"
+        android:title="@string/save"
+        android:actionLayout="@layout/menu_save_button"
         app:showAsAction="ifRoom" />
-
 </menu>
