--- a/app/src/main/res/layout/contact_new_vcard_item_email_address.xml
+++ b/app/src/main/res/layout/contact_new_vcard_item_email_address.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
@@ -41,9 +40,10 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/fields_default_space_small"
             android:background="@color/white"
-            android:elevation="3dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:drawableStart="@drawable/ic_plus"
+            android:drawablePadding="@dimen/padding_m"
+            android:elevation="@dimen/elevation_m"
+            android:paddingHorizontal="@dimen/padding_l"
             android:text="@string/add_new_email"
             android:textAllCaps="false"
             android:textSize="16sp"
@@ -55,7 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
 
         <RelativeLayout
@@ -75,17 +76,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/btnOptionType">
 
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:id="@+id/optionIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"
-                    android:paddingEnd="@dimen/fields_default_space_small_minus"
-                    android:textColor="@color/contact_heading"
-                    android:textSize="16sp"
-                    app:fontName="contacts_icons.ttf" />
-
                 <TextView
                     android:id="@+id/optionTitle"
                     android:layout_width="match_parent"
@@ -93,6 +83,8 @@
                     android:layout_gravity="center_vertical"
                     android:clickable="true"
                     android:focusable="true"
+                    tools:text="@tools:sample/lorem"
+                    android:layout_marginStart="@dimen/padding_m"
                     android:gravity="center_vertical"
                     android:textColor="@color/contact_heading"
                     android:textSize="16sp" />
@@ -109,42 +101,7 @@
                 tools:ignore="ContentDescription" />
         </RelativeLayout>
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fields_default_space_medium"
-            android:layout_marginEnd="@dimen/fields_default_space_small"
-            android:layout_marginBottom="@dimen/fields_default_space">
-
-            <ImageButton
-                android:id="@+id/btn_minus"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_circle_minus"
-                tools:ignore="ContentDescription" />
-
-            <ch.protonmail.android.views.CustomFontEditText
-                android:id="@+id/option"
-                style="@style/V3EditText.NoBg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/btn_minus"
-                android:inputType="textNoSuggestions"
-                android:maxLines="1"
-                android:paddingStart="@dimen/fields_default_space_small"
-                android:paddingEnd="@dimen/fields_default_space_small"
-                android:paddingBottom="@dimen/fields_default_space_small"
-                android:textColor="@color/contact_data"
-                android:textCursorDrawable="@null"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:fontName="Roboto-Bold.ttf" />
-        </RelativeLayout>
-
+        <include layout="@layout/layout_edit_filed_with_delete" />
 
         <View
             android:id="@+id/separator"
