--- a/app/src/main/res/layout/contact_vcard_item_note.xml
+++ b/app/src/main/res/layout/contact_vcard_item_note.xml
@@ -44,20 +44,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:paddingStart="@dimen/padding_s"
                 android:layout_toStartOf="@id/btnOptionType">
-
-                <!-- Option icon -->
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:id="@+id/optionIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"
-                    android:paddingStart="@dimen/fields_default_space_small_minus"
-                    android:paddingEnd="@dimen/fields_default_space_small_minus"
-                    android:textColor="@color/contact_heading"
-                    android:textSize="16sp"
-                    app:fontName="contacts_icons.ttf" />
 
                 <!-- Option Name -->
                 <TextView
@@ -84,46 +72,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 tools:ignore="ContentDescription" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fields_default_space_medium"
-            android:layout_marginEnd="@dimen/fields_default_space_small"
-            android:layout_marginBottom="@dimen/fields_default_space">
-
-            <ImageButton
-                android:id="@+id/btn_minus"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_circle_minus"
-                tools:ignore="ContentDescription" />
-
-            <ch.protonmail.android.views.CustomFontEditText
-                android:id="@+id/option"
-                style="@style/V3EditText.NoBg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/btn_minus"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:overScrollMode="always"
-                android:paddingStart="@dimen/fields_default_space_small"
-                android:paddingLeft="@dimen/fields_default_space_small"
-                android:paddingEnd="@dimen/fields_default_space_small"
-                android:paddingRight="@dimen/fields_default_space_small"
-                android:paddingBottom="@dimen/fields_default_space_small"
-                android:scrollbarStyle="insideInset"
-                android:scrollbars="vertical"
-                android:textColor="@color/contact_data"
-                android:textColorHint="@color/iron_gray"
-                android:textCursorDrawable="@null"
-                android:textAlignment="viewStart"
-                app:fontName="Roboto-Bold.ttf" />
-
-        </RelativeLayout>
+        <include layout="@layout/layout_edit_filed_with_delete" />
     </LinearLayout>
 
     <ch.protonmail.android.views.CustomFontButton
