Fixed contact details delete actions closing/ not closing details screen when needed.
MAILAND-1967

--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -48,8 +48,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/padding_5xl"
-                android:layout_marginBottom="@dimen/padding_xxl"
+                android:layout_marginTop="@dimen/padding_4xl"
+                android:layout_marginBottom="@dimen/padding_l"
                 app:circleSize="@dimen/avatar_size"
                 app:layout_collapseMode="parallax" />
 
@@ -58,8 +58,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:layout_width="@dimen/avatar_size"
                 android:layout_height="@dimen/avatar_size"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/padding_5xl"
-                android:layout_marginBottom="@dimen/padding_xxl"
+                android:layout_marginTop="@dimen/padding_4xl"
+                android:layout_marginBottom="@dimen/padding_l"
                 android:contentDescription="@string/contact_details"
                 android:scaleType="fitXY"
                 android:visibility="gone"
@@ -97,8 +97,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:id="@+id/text_view_contact_details_contact_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginVertical="@dimen/padding_l"
+                android:layout_gravity="center"
+                android:layout_marginVertical="@dimen/padding_m"
                 android:gravity="center"
                 android:textAppearance="@style/Proton.Text.Headline"
                 app:layout_collapseMode="pin"
