--- a/app/src/main/res/drawable/ic_contact_groups.xml
+++ b/app/src/main/res/drawable/ic_contact_groups.xml
@@ -1,28 +1,39 @@
 <!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@color/white"
-        android:pathData="M23.5,22.3c0,-0.1 0,-0.3 0,-0.4c0,-3.7 -1.9,-6.8 -4.5,-7.9c1.5,-0.8 2.5,-2.3 2.5,-4.1c0,-2.6 -2.1,-4.7 -4.7,-4.7c-1.2,0 -2.3,0.5 -3.1,1.2c-0.4,-2.7 -2.7,-4.7 -5.4,-4.7c-3,0 -5.5,2.5 -5.5,5.5c0,2.2 1.3,4.1 3.2,5c-3.2,1.2 -5.6,5.1 -5.6,9.6c0,0.1 0,0.3 0,0.4c0,0 0,0.1 0,0.1c0,0.4 0.3,0.8 0.8,0.8h0h14.2h7.3c0.1,0 0.1,0 0.2,0c0,0 0.1,0 0.1,0c0.2,-0.1 0.3,-0.2 0.4,-0.3c0,0 0,0 0,0c0,-0.1 0.1,-0.1 0.1,-0.2c0,0 0,0 0,0c0,0 0,0 0,0C23.5,22.4 23.5,22.4 23.5,22.3C23.5,22.3 23.5,22.3 23.5,22.3zM22,21.6h-5.8c0,-2.2 -0.6,-4.2 -1.6,-5.9c0.7,-0.5 1.5,-0.7 2.3,-0.7C19.6,15 21.9,17.9 22,21.6zM12.4,10.9c0.3,1.3 1.2,2.4 2.4,3c-0.3,0.1 -0.7,0.3 -1,0.5c-0.9,-1.1 -2,-1.9 -3.1,-2.3C11.3,11.9 11.9,11.4 12.4,10.9zM16.9,6.7c1.7,0 3.2,1.4 3.2,3.2S18.6,13 16.9,13s-3.2,-1.4 -3.2,-3.2S15.2,6.7 16.9,6.7zM4.4,7.2c0,-2.2 1.8,-4 4,-4c2.2,0 4,1.8 4,4c0,2.2 -1.8,4 -4,4C6.2,11.1 4.4,9.4 4.4,7.2zM2,21.6c0.1,-4.6 2.9,-8.4 6.4,-8.4c1.8,0 3.5,1.1 4.7,2.8c0,0 0,0 0,0.1c0,0 0,0 0,0c1,1.5 1.6,3.4 1.7,5.5H2z" />
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+  <path
+      android:pathData="M4.4315,3.4116C4.7561,2.4449 5.6927,1.8194 6.71,1.89C7.1269,1.9101 7.5293,2.0489 7.87,2.29L8.44,1.47C7.9481,1.1251 7.3698,0.9243 6.77,0.89C5.9083,0.8408 5.0637,1.1441 4.43,1.73C3.7852,2.2981 3.3959,3.1018 3.35,3.96C3.2885,5.0992 3.8271,6.1877 4.77,6.83L5.33,6C4.4762,5.4423 4.1069,4.3783 4.4315,3.4116Z"
+      android:fillColor="@color/icon_norm"/>
+  <path
+      android:pathData="M9.52,9.37C7.7306,9.37 6.28,7.9194 6.28,6.13C6.28,4.3406 7.7306,2.89 9.52,2.89C11.3094,2.89 12.76,4.3406 12.76,6.13C12.76,7.9194 11.3094,9.37 9.52,9.37ZM9.52,3.89C8.2829,3.89 7.28,4.8929 7.28,6.13C7.28,7.3671 8.2829,8.37 9.52,8.37C10.7571,8.37 11.76,7.3671 11.76,6.13C11.76,4.8929 10.7571,3.89 9.52,3.89Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M11.95,10.35L15.04,12.41V15H4.04V12.41L7.04,10.35H11.95ZM5.04,14H14.04V12.94L11.65,11.35H7.39L5.04,12.94V14Z"
+      android:fillColor="@color/icon_norm"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M4.08,8.35H5.04V9.35H4.39L2,10.94V12H3.04V13H1V10.41L4.08,8.35Z"
+      android:fillColor="@color/icon_norm"/>
 </vector>
