Slight restyling of edit contact add new somenthing buttons.
MAILAND-1876

--- a/app/src/main/res/drawable/ic_minus.xml
+++ b/app/src/main/res/drawable/ic_minus.xml
@@ -25,5 +25,5 @@
     <path
         android:fillColor="@color/interaction_norm"
         android:fillType="evenOdd"
-        android:pathData="M14.5,7.5H8.5V1.5H7.5V7.5H1.5V8.5H7.5V14.5H8.5V8.5H14.5V7.5Z" />
+        android:pathData="M2,8V9H15V8H2Z" />
 </vector>
