--- a/app/src/main/res/layout/layout_edit_filed_with_delete.xml
+++ b/app/src/main/res/layout/layout_edit_filed_with_delete.xml
@@ -33,7 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_minus"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <ImageButton
         android:id="@+id/btn_minus"
