--- a/app/src/main/res/layout/contact_new_vcard_address.xml
+++ b/app/src/main/res/layout/contact_new_vcard_address.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -32,31 +31,16 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btn_plus"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/fields_default_space"
-            android:layout_marginRight="@dimen/fields_default_space"
-            android:background="@android:color/transparent"
-            android:clickable="false"
-            android:focusable="false"
-            android:src="@drawable/ic_circle_plus" />
-
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:paddingStart="0dp"
-            android:paddingLeft="0dp"
-            android:paddingEnd="0dp"
-            android:paddingRight="0dp"
+            android:drawableStart="@drawable/ic_plus"
+            android:drawablePadding="@dimen/padding_s"
+            android:gravity="center"
             android:textAllCaps="true"
-            android:textColor="@color/contact_action"
-            app:fontName="Roboto-Regular.ttf" />
+            tools:text="Option title" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,10 +63,11 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/btnOptionType"
-                android:layout_toLeftOf="@id/btnOptionType"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true">
+                android:layout_alignParentLeft="true"
+                android:layout_toStartOf="@id/btnOptionType"
+                android:layout_toLeftOf="@id/btnOptionType">
+
                 <ch.protonmail.android.views.CustomFontTextView
                     android:id="@+id/optionIcon"
                     android:layout_width="wrap_content"
@@ -104,7 +89,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                     android:focusable="true"
                     android:gravity="center_vertical"
                     android:textColor="@color/contact_heading"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:text="option title" />
             </LinearLayout>
 
             <ImageButton
@@ -126,14 +112,14 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
             <ImageButton
                 android:id="@+id/btn_minus"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_circle_minus" />
+                android:src="@drawable/ic_minus" />
 
             <FrameLayout
                 android:layout_width="match_parent"
